feat(Alexnet): 添加AlexNet模型及相关脚本
在.gitignore文件中添加了Alexnet/flower_photos/flower_photos/和Alexnet/flower_data/路径，以忽略这些目录中的文件。

在Alexnet/model.py中添加了AlexNet类的具体实现，包括卷积层、ReLU激活函数、最大池化层及全连接层，定义了forward方法用于前向传播，并添加了_initialze_weights方法以初始化权重。

在Alexnet/split_data.py中添加了数据集划分的脚本，实现了将flower_photos文件夹中的图像随机划分到训练集和验证集的功能，其中验证集占数据集总量的10%。

在tensorflow-mnist/model.py中添加了一个简单的卷积神经网络模型MyModel，模型包含一个卷积层、一个展平层和两个全连接层，实现了前向传播过程。

在tensorflow-mnist/train.py中添加了基于MNIST数据集的训练脚本，实现了数据预处理、模型训练及评估功能。

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ catvsdog/test1/
 catvsdog/train/
 catvsdog/small_dataset/
 catvsdog/saved_model/
+Alexnet/flower_photos/flower_photos/
+Alexnet/flower_data/
