feat(Alexnet): 添加预测脚本和模型保存功能
在 `.gitignore` 文件中新增了 `Alexnet/Alexnet_model.pth`，用于防止保存的模型文件被提交到版本控制中。

新增了 `flower_dict.json` 文件，用于存储花类别的字典映射，方便模型预测时将类别索引转换为类别名称。

在 `model.py` 文件中，为 `Dropout` 层添加了注释，解释了它在防止过拟合方面的作用。

新增了 `predict.py` 文件，实现了基于预训练模型的图像预测功能，包括图像预处理、模型加载、预测结果输出等步骤。

新增了 `tempCodeRunnerFile.py` 文件，包含了训练过程的代码片段，但目前未启用。

新增了 `train.py` 文件，实现了完整的模型训练流程，包括数据增强、模型定义、损失计算、优化器更新、模型保存等步骤。该脚本使用 Adam 优化器替代了 SGD，并增加了模型保存逻辑，以便保存最佳验证准确率的模型。

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ catvsdog/small_dataset/
 catvsdog/saved_model/
 Alexnet/flower_photos/flower_photos/
 Alexnet/flower_data/
+Alexnet/Alexnet_model.pth
