feat(Alexnet): 添加AlexNet_v1和AlexNet_v2模型实现及训练脚本
新增AlexNet_v1和AlexNet_v2两个版本的AlexNet模型实现，包含卷积层、池化层和全连接层等结构。
新增训练脚本train_tensorflow.py，使用TensorFlow进行数据加载、模型训练和结果可视化。
在.gitignore中添加了新的权重文件保存路径，以防止版本控制中包含不必要的大文件。

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ catvsdog/saved_model/
 Alexnet/flower_photos/flower_photos/
 Alexnet/flower_data/
 Alexnet/Alexnet_model.pth
+Alexnet/save_weights/myAlex100%.weights.h5
