--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Alexnet/flower_photos/flower_photos/
 Alexnet/flower_data/
 Alexnet/Alexnet_model.pth
 Alexnet/save_weights/myAlex100%.weights.h5
+GoogleLeNet/googleNet.pth
