--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Alexnet/flower_data/
 Alexnet/Alexnet_model.pth
 Alexnet/save_weights/myAlex100%.weights.h5
 GoogleLeNet/googleNet.pth
+Resnet/resnet34-pre.pth
+Resnet/resNet34.pth
