feat: 添加图像分类和目标分割功能
在代码库中添加了图像分类和目标分割的相关功能。具体更改如下：

- 在 `.gitignore` 中增加了对 `Hands-on-learning-computer-vision/caltech-101/` 和 `Hands-on-learning-computer-vision/VOCdevkit/` 目录的忽略，以避免将这些数据集文件纳入版本控制。
- 创建了一个新的 Python 脚本 `10.1.py`，实现了基于 ResNet34 的图像分类功能。该脚本包括数据加载、数据增强、模型定义、训练和验证循环以及结果可视化。
- 创建了另一个新的 Python 脚本 `9.1.py`，实现了基于 Segment Anything Model (SAM) 的目标分割功能。该脚本通过交互式点击选择目标，并使用 SAM 生成掩码以提取前景对象。
- 添加了一个新的 Python 文件 `ResNet.py`，实现了 ResNet 网络结构，包括 BasicBlock 和 Bottleneck 块，以及不同深度的 ResNet 模型配置（如 ResNet34、ResNet50、ResNet101 和 ResNeXt 模型）。
- 创建了一个空的 Python 文件 `11.1.py`，可能是为后续开发预留的脚本。
- 创建了一个空的 Python 文件 `tempCodeRunnerFile.py`，可能用于临时代码测试，目前仅包含一个注释行。

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ YOLOv8-main/dataset/
 *.jpg
 *.ckpt
 *.jpeg
+Hands-on-learning-computer-vision/caltech-101/
+Hands-on-learning-computer-vision/VOCdevkit/
