--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ YOLOv8-main/dataset/
 *.jpeg
 Hands-on-learning-computer-vision/caltech-101/
 Hands-on-learning-computer-vision/VOCdevkit/
+Hands-on-learning-computer-vision/ImageNet/
