删除垃圾文件

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ YOLOv8-main/dataset/
 Hands-on-learning-computer-vision/caltech-101/
 Hands-on-learning-computer-vision/VOCdevkit/
 Hands-on-learning-computer-vision/ImageNet/
+Hands-on-learning-computer-vision/15.1.py
+Hands-on-learning-computer-vision/UCF101/
+Hands-on-learning-computer-vision/UCF-101/
+Hands-on-learning-computer-vision/ucfTrainTestlist/
+Hands-on-learning-computer-vision/c3d.pickle
+Hands-on-learning-computer-vision/UCF101.tar.xz
+Hands-on-learning-computer-vision/UCF101.tar.xz:Zone.Identifier
