--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ Hands-on-learning-computer-vision/ucfTrainTestlist/
 Hands-on-learning-computer-vision/c3d.pickle
 Hands-on-learning-computer-vision/UCF101.tar.xz
 Hands-on-learning-computer-vision/UCF101.tar.xz:Zone.Identifier
+Hands-on-learning-computer-vision/c3d-pytorch
