DPO是一种基于人类反馈的优化方法，直接利用偏好数据（如“回答A比回答B更好”）调整模型，无需显式训练奖励模型（RLHF中的步骤）。

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ Hands-on-learning-computer-vision/c3d.pickle
 Hands-on-learning-computer-vision/UCF101.tar.xz
 Hands-on-learning-computer-vision/UCF101.tar.xz:Zone.Identifier
 Hands-on-learning-computer-vision/c3d-pytorch
+AI-Guide-and-Demos-zh_CN/Breeze-7B-Instruct-v0_1/
+AI-Guide-and-Demos-zh_CN/checkpoint-7/
