--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Hands-on-learning-computer-vision/UCF101.tar.xz:Zone.Identifier
 Hands-on-learning-computer-vision/c3d-pytorch
 AI-Guide-and-Demos-zh_CN/Breeze-7B-Instruct-v0_1/
 AI-Guide-and-Demos-zh_CN/checkpoint-7/
+AI-Guide-and-Demos-zh_CN/opus-mt-zh-en/
