--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ Hands-on-learning-computer-vision/c3d-pytorch
 AI-Guide-and-Demos-zh_CN/Breeze-7B-Instruct-v0_1/
 AI-Guide-and-Demos-zh_CN/checkpoint-7/
 AI-Guide-and-Demos-zh_CN/opus-mt-zh-en/
+AI-Guide-and-Demos-zh_CN/output-信号与人生.txt
+AI-Guide-and-Demos-zh_CN/output-信号与人生.srt
+AI-Guide-and-Demos-zh_CN/test-00000-of-00001.parquet
+AI-Guide-and-Demos-zh_CN/medium.pt
+AI-Guide-and-Demos-zh_CN/audio.mp3
