Mistral-7B-Instruct-v0.3-Q4_K_M.gguf进行ai量化对话

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ AI-Guide-and-Demos-zh_CN/output-信号与人生.srt
 AI-Guide-and-Demos-zh_CN/test-00000-of-00001.parquet
 AI-Guide-and-Demos-zh_CN/medium.pt
 AI-Guide-and-Demos-zh_CN/audio.mp3
+AI-Guide-and-Demos-zh_CN/Mistral-7B-Instruct-v0.3-Q4_K_M.gguf
+AI-Guide-and-Demos-zh_CN/Mistral-7B-Instruct-v0.3-Q4_K_M.gguf:Zone.Identifier
