--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ AI-Guide-and-Demos-zh_CN/Mistral-7B-Instruct-v0.3-Q4_K_M.gguf:Zone.Identifier
 AI-Guide-and-Demos-zh_CN/faiss_index/index.pkl
 AI-Guide-and-Demos-zh_CN/faiss_index/index.faiss
 AI-Guide-and-Demos-zh_CN/pip_conf.py
+AI-Guide-and-Demos-zh_CN/【源代码】深度学习入门：基于Python的理论与实现_20240716/data/
