--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 ML2025Spring-hw2/Meta-Llama-3.1-8B-Instruct-Q8_0.gguf
+ML2025Spring-hw2/models/
+ML2025Spring-hw2/runs/
+ML2025Spring-hw2/best_model.pth
